--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="audiodiv">
         <audio id="myAudio" preload="none">
-            <source src="./just-the-way-you-are-sub-espanol-ingles.mp3" type="audio/mpeg">
+            <source src="./reggaetón-lento-bailemos.mp3" type="audio/mpeg">
         </audio>
         <div id="playPauseBtn" class="play">
             <img src="./figuras/notamusical.png" alt="Icono de música">
