--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     </div>
 
         <div  data-aos="fade-up"  class="galeria1">
-        <img  class="f1" src="./img/1.png" alt="FOTO">
-        <img  class="f4" src="./img/1.png" alt="FOTO">
-        <img class="f4" src="./img/1.png"  alt="FOTO">
-        <img class="f4" src="./img/1.png"  alt="FOTO">
+        <img  class="f1" src="./1.png" alt="FOTO">
+        <img  class="f4" src="./1.png" alt="FOTO">
+        <img  class="f4" src="./1.png" alt="FOTO">
+        <img  class="f4" src="./1.png" alt="FOTO">
     </div>
 
 
@@ -108,10 +108,10 @@
 
 
         <div  data-aos="fade-up"  class="galeria2">
-        <img class="f1" src="./img/2.png" alt="FOTO">
-        <img class="f1" src="./img/3.png" alt="FOTO">
-        <img class="f1" src="./img/4.png"  alt="FOTO">
-        <img class="f1" src="./img/5.png"  alt="FOTO">
+        <img class="f1" src="./2.png" alt="FOTO">
+        <img class="f1" src="./3.png" alt="FOTO">
+        <img class="f1" src="./4.png" alt="FOTO">
+        <img class="f1" src="./5.png" alt="FOTO">
     </div>
 
 
@@ -138,22 +138,22 @@
               podes ponerlo en un sobre o puedes consultarlo aquí </p>
             
            <br>
-            <a  data-aos="fade-up"  class="boton" onclick="copyToClipboard('esto es un ejempplo')" >CBU</a>
-            <a  data-aos="fade-up"  class="boton" onclick="copyToClipboard('esto es un ejemplo')">ALIAS</a> <br>
+            <a  data-aos="fade-up"  class="boton" onclick="copyToClipboard('0720102488000036077418')" >CBU</a>
+            <a  data-aos="fade-up"  class="boton" onclick="copyToClipboard('Lucía.perez.capua.15')">ALIAS</a> <br>
           <br>
-            <p  data-aos="fade-up" >Hace clic para copiar los datos de la cuenta. <br> Titular: XXXXX, XXXXXX XXXXXX</p>
+            <p  data-aos="fade-up" >Hace clic para copiar los datos de la cuenta. <br> Titular: Capua, Silvia Patricia</p>
         </div>
     </div>
 
 
 
-        <div  data-aos="fade-up"  class="galeria1">
-        <img class="f1" src="./img/6.png" alt="FOTO">
-        <img class="f4" src="./img/6.png" alt="FOTO">
-        <img class="f4" src="./img/6.png"  alt="FOTO">
-        <img class="f4" src="./img/6.png"  alt="FOTO">
-    </div>
 
+    <div  data-aos="fade-up"  class="galeria1">
+      <img  class="f1" src="./6.png" alt="FOTO">
+      <img  class="f4" src="./6.png" alt="FOTO">
+      <img  class="f4" src="./6.png" alt="FOTO">
+      <img  class="f4" src="./6.png" alt="FOTO">
+  </div>
 
     <div class="end">
       <div class="end-names">
