--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
  
     <div class="ubicacion">
       <p>
-        Hace quince años , un día lleno de sol y muy frio, llegué a este mundo para transformarlo, y de que manera! Quiero compartir este momento con cada uno de ustedes por estar siempre desde ese primer gran dia!
-      </p>
+        Hace quince años, en un día lleno de sol y muy frío, llegué a este mundo para transformarlo… ¡y de qué manera! Quiero compartir este momento con cada uno de ustedes, por haber estado siempre, desde aquel primer gran día.      </p>
         <div class="ubicacion-bloque">
             <img   data-aos="fade-up"  class="icon"   src="./figuras/fiesta.png" alt="fiesta">
             <h2  data-aos="fade-up"  >FIESTA</h2>
